--- a/index.html
+++ b/index.html
@@ -5,49 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribunal - Accès aux affaires</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'EB Garamond', serif;
+            background: linear-gradient(to bottom, #f7f1e1, #e0d7c1);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
+            margin: 0;
         }
+
         .container {
-            background-color: white;
-            padding: 30px;
+            background-color: #fff8f0;
+            padding: 40px;
             border-radius: 12px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
             text-align: center;
+            max-width: 400px;
+            width: 90%;
         }
+
+        h2 {
+            color: #4b3b2a;
+            margin-bottom: 10px;
+        }
+
         input {
-            padding: 8px;
+            padding: 10px;
             margin: 10px 0 20px 0;
             width: 100%;
             border-radius: 6px;
-            border: 1px solid #ccc;
+            border: 1px solid #aaa;
+            font-size: 1rem;
         }
+
         button {
-            padding: 10px 20px;
+            padding: 12px 25px;
             border-radius: 6px;
             border: none;
-            background-color: #0077cc;
-            color: white;
+            background-color: #4b3b2a;
+            color: #fff8f0;
+            font-size: 1rem;
             cursor: pointer;
+            transition: background-color 0.3s;
         }
+
         button:hover {
-            background-color: #005fa3;
+            background-color: #392b1f;
+        }
+
+        #nomAffaire {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #2a1f12;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container" id="formContainer">
         <h2>Numéro de l'affaire à juger</h2>
-        <input type="text" id="affaireInput" placeholder="Ex: 123A">
+        <input type="text" id="affaireInput" placeholder="">
         
         <h2>Matricule du juge</h2>
-        <input type="text" id="matriculeInput" placeholder="Ex: cestmoiquidecide">
+        <input type="password" id="matriculeInput" placeholder="">
         
         <button onclick="verifier()">Valider</button>
     </div>
@@ -83,4 +107,3 @@
     </script>
 </body>
 </html>
-
