--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@ function afficherJugement(affaire) {
     
     // Afficher les symboles selon le montant de l'amende
     if (montantAmendeActuel == 3) {
-        symbolesJugement.innerHTML = "⚖️📜   📜📜   ⚖️   📜⚖️   📜⚖️⚖️   ⚖️<br>📜⚖️📜⚖️   📜📜📜   📜⚖️   ⚖️⚖️📜⚖️ 📜📜📜   ⚖️📜⚖️   📜📜   ⚖️ ⚖️📜";
+        symbolesJugement.innerHTML = "⚖️📜      📜📜      ⚖️      📜⚖️      📜⚖️⚖️      ⚖️<br>📜⚖️📜⚖️      📜📜📜      📜⚖️      ⚖️⚖️📜⚖️      📜📜📜      ⚖️📜⚖️      📜📜      ⚖️";
     } else {
-        symbolesJugement.innerHTML = "⚖️📜   📜📜   ⚖️   📜⚖️   📜⚖️⚖️   ⚖️<br>📜⚖️📜⚖️   ⚖️⚖️📜   ⚖️📜📜⚖️   ⚖️⚖️   📜⚖️⚖️   ⚖️";
+        symbolesJugement.innerHTML = "⚖️📜      📜📜      ⚖️      📜⚖️      📜⚖️⚖️      ⚖️<br>📜⚖️📜⚖️      ⚖️⚖️📜      ⚖️📜📜⚖️      ⚖️⚖️      📜⚖️⚖️      ⚖️";
     }
 
     accueil.style.display = "none";
