--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@ em {
 }
 
 #symbolesJugement {
-    background: rgba(0, 0, 0, 0.6);
-    padding: 20px;
-    border-radius: 10px;
-    border: 1px solid #8b6914;
+    opacity: 0.15;
+    font-size: 0.5em !important;
+    line-height: 1.2;
+    margin: 8px 0 !important;
 }
 
 #listeAffaires:empty::before {
@@ -446,7 +446,7 @@ function confirmerJugement() {
 }
 
 function afficherJugement(affaire) {
-    jugementTitre.innerText = "Affaire : " + affaire;
+    jugementTitre.innerText = affaire;
     
     const affairesBienfaitrices = ["Rubans_Rattachés", "Bougies_Réveillées"];
     const estBienfaiteur = affairesBienfaitrices.includes(affaire);
