--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ em {
 <div class="container" id="accueil">
     <h2>⚖️ Tribunal du Carnaval ⚖️</h2>
     
-    <label for="affaireInput">📜 Numéro de l'affaire à juger</label>
-    <input type="text" id="affaireInput" placeholder="Entrez le numéro de l'affaire">
+    <label for="affaireInput">📜 NOM de l'affaire à juger</label>
+    <input type="text" id="affaireInput" placeholder="Entrez le NOM de l'affaire">
 
     <label for="matriculeInput">🔐 Matricule du juge</label>
     <input type="password" id="matriculeInput" placeholder="Matricule confidentiel">
